syntax = "proto3";

package com.yoda.creditCard;

option java_multiple_files = true;
option java_package = "com.yoda.creditCard";
option java_outer_classname = "CreditCardProto";

service CreditCards {
  rpc getCreditCards (CreditCardRequest) returns (CreditCardReply) {
  }
}

message CreditCardRequest {
  string userId = 1;
}

message CreditCard {
  int64 id = 1;
  string title = 2;
  string description = 3;
  string flag = 4;
  fixed64 value = 5;
}

message CreditCardReply {
  repeated CreditCard creditCard = 1;
}